--- a/examples/BIOMD0000000007/BIOMD0000000007.html
+++ b/examples/BIOMD0000000007/BIOMD0000000007.html
@@ -1,4 +1,4 @@
-<!--2025-06-04 10:21:12-->
+<!--2025-08-01 15:56:16-->
 <!DOCTYPE html>
 <html>
 <head>
@@ -36,6 +36,7 @@
     Time: <time id="playback_position">0.00</time>
     <input type="range" id="progress" value="0" min="0" step="any">
     <time id="end_position">100.0</time>
+    <select name="timerspeed" id="timerspeed"></select>
   </div>
  </div>
 
